tests/lexer/invalid/test_mixed_errors.src
x = @;
y = 123.;
z = "unterminated
w = #test;